# samba-manager

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  readme.md
backend/: .env  .ignore  Cargo.toml  Rocket.toml
backend/migrations/2022-09-02-192116_init/: down.sql  up.sql
backend/src/: argus.rs  db.rs  guards.rs  log.rs  main.rs  models.rs  schema.rs
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/src/: app.css  app.html  app.postcss  app.scss
frontend/src/lib/: Loader.svelte  api.ts  filterState.ts  logStore.ts  sse.ts  state.ts
frontend/src/lib/Components/: Event.svelte  FilterPicker.svelte  Navbar.svelte
frontend/src/lib/translations/: en.json  es.json  eu.json  index.ts  lang.json
frontend/src/lib/translations/en/: common.json  dashboard.json  login.json
frontend/src/lib/translations/es/: common.json  dashboard.json  login.json
frontend/src/lib/translations/eu/: common.json  dashboard.json  login.json
frontend/src/routes/: +layout.svelte  +layout.ts
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
