[package]
name = "samba-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json", "secrets", "tls"]}
regex = "1.6"
diesel = { version = "1.3.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3.8"
lazy_static = "1.4.0"
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"] }
tokio = {version = "1.21.1", features = ["process"]}
libsqlite3-sys = {version = "0.22.2", features = ["bundled"] }
fuzzy-matcher = "0.3.7"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool", "sqlite_pool"]
